@@ -6,6 +6,7 @@
 - WOM-311: Update CODEOWNERS
 - WOM-319: Fix timing issue with LRCInProgress and Abort
 - WOM-250: Remove max_workers from TaskExecutor
+- WOM-320: Do not directly call Tango operations while holding the CommandTracker lock
 
 ## 0.20.1
 
